# TimeSeries-Forecaster-AI-Docker-Edition-

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: search.js  src.html
docs/src/: main.html  models.html  preprocess.html  visualize.html
docs/tutorials/: tutorial.md
src/: models.py  preprocess.py  train.py  visualize.py
tests/: test_models.py  test_preprocess.py
